# aequatio

./: .gitignore  Aequatio.cpp  AequatioUI.glade  CMakeLists.txt  Doxyfile  EquationSystem.cpp  EquationSystem.hpp  InterfaceXML.hpp  MainWindow.cpp  MainWindow.hpp  README.md
